[gd_scene load_steps=13 format=3 uid="uid://dtxc686ce8ptc"]

[ext_resource type="PackedScene" uid="uid://dmpbuxf4kqwr3" path="res://src/Scenes/Enemies/API/enemy_space_ship.tscn" id="1_sdjo8"]
[ext_resource type="Script" path="res://src/Scripts/Entity/Enemies/Asteroid/asteroid.gd" id="2_lfxp6"]
[ext_resource type="Texture2D" uid="uid://dma7nu2eff6i1" path="res://Assets/Textures/Enemies/Asteroid/Asteroid 01 - Explode.png" id="2_w0ypp"]
[ext_resource type="Texture2D" uid="uid://bfc0uvibyaxil" path="res://Assets/Textures/Enemies/Asteroid/Asteroid - Flame.png" id="4_64ljx"]
[ext_resource type="AudioStream" uid="uid://nscn40kuy7dd" path="res://Assets/Sounds/Enemies/Death.wav" id="4_cbkod"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tn6hd"]
radius = 16.0
height = 36.0

[sub_resource type="Animation" id="Animation_4ups7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_utuxc"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xiwx8"]
_data = {
"RESET": SubResource("Animation_4ups7"),
"death": SubResource("Animation_utuxc")
}

[sub_resource type="Animation" id="Animation_5t545"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_rgvxt"]
resource_name = "idle"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt5rb"]
_data = {
"RESET": SubResource("Animation_5t545"),
"idle": SubResource("Animation_rgvxt")
}

[node name="Asteroid" groups=["enemies"] instance=ExtResource("1_sdjo8")]
position = Vector2(230, 37)
script = ExtResource("2_lfxp6")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tn6hd")

[node name="Sprite2D" parent="." index="2"]
texture = ExtResource("2_w0ypp")
hframes = 8
frame = 1

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_xiwx8")
}

[node name="death" parent="." index="4"]
stream = ExtResource("4_cbkod")

[node name="EnginePlayer" parent="." index="5"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_nt5rb")
}

[node name="Engine" parent="." index="6"]
rotation = -1.5708
texture = ExtResource("4_64ljx")
hframes = 3
frame = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
